# lingmo-font-viewer

./: lingmo-font-viewer.doap  meson.build
build-aux/flatpak/: org.gnome.font-viewerDevel.json
data/: lingmo-font-viewer.thumbnailer  meson.build  org.lingmo.font-viewer.appdata.xml.in  org.lingmo.font-viewer.desktop.in.in  org.lingmo.font-viewer.service.in
data/icons/: meson.build
debian/: changelog  control.in  copyright  docs
debian/upstream/: metadata
po/: POTFILES.in  POTFILES.skip  ab.po  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  gl.po  (+63 more)
src/: font-model.c  font-model.h  font-thumbnailer.c  font-view-application.c  font-view-application.h  font-view-window.c  font-view-window.h  lingmo-font-viewer.gresource.xml  main.c  meson.build  sushi-font-widget.c
